--- a/_posts/2023-09-24-Mysql.md
+++ b/_posts/2023-09-24-Mysql.md
@@ -2,4 +2,9 @@
 数据定义语言DDL  
 数据查询语言DQL  
 数据操纵语言DML  
-数据控制功能DCL
+<front color=red>数据控制功能DCL</front>
+
+> 傻逼
+
+1. 创建数据库
+> <front color=red>CREATE DATABASE</front> db_name CHARACTER SET 字符集 COLLATE 排序规则
