--- a/_posts/2023-09-24-Mysql.md
+++ b/_posts/2023-09-24-Mysql.md
@@ -8,3 +8,19 @@
 
 1. 创建数据库
 > <font color=red>CREATE DATABASE</font> db_name <font color=red>CHARACTER SET</font> 字符集 <font color=red>COLLATE</font> 排序规则
+>可以用反引号规避关键字 '` `' e.g. '`CREATE`'  
+  
+
+2. 备份数据库
+> <font color=red>数据库备份</font>是指通过导出数据或者复制表文件的方式来制作数据库的副本。当数据库现故障或遭到破坏时，将备份的数据库加载到系统，从而使数据库从错误状态恢复到备份时的正确状态。
+
+使用 mysqldump 命令备份一个数据库的语法格式如下：  
+> mysqldump -u username -p dbname [tbname ...]> filename.sql
+
+对上述语法参数说明如下：
+
+- username：表示用户名称；
+- dbname：表示需要备份的数据库名称；
+- tbname：表示数据库中需要备份的数据表，可以指定多个数据表。省略该参数时，会<font color=red>备份整个数据库</font>；
+- 右箭头“>”：用来告诉 mysqldump 将备份数据表的定义和数据写入备份文件；
+- filename.sql：表示备份文件的名称，<font color=red>文件名前面可以加绝对路径</font>。通常将数据库备份成一个后缀名为 <font color=red>.sql</font> 的文件。
