--- a/_posts/2023-9-26-Mysq必知必会第八章.md
+++ b/_posts/2023-9-26-Mysq必知必会第八章.md
@@ -1,2 +1,12 @@
 1. _我们的商店已经上线了，正在创建顾客账户。所有用户都需要登录名，默认登录名是其名称和所在城市的组合。编写SQL语句，返回顾客ID（cust_id）、顾客名称（customer_name）和登录名（user_login），其中登录名全部为大写字母，并由顾客联系人的前两个字符（cust_contact）和其所在城市的前三个字符（cust_city）组成。例如，我的登录名是BEOAK（Ben Forta，居住在Oak Park）。提示：需要使用函数、拼接和别名。_
->
+>_SELECT cust_id, 
+UPPER(CONCAT(LEFT(cust_contact,2),LEFT(cust_city,3))) 
+AS user_login,
+cust_name AS customer_name
+FROM customers_
+
+2. _编写SQL语句，返回2020年1月的所有订单的订单号（order_num）和订单日期（order_date），并按订单日期排序。你应该能够根据目前已学的知识来解决此问题，但也可以开卷查阅DBMS文档。_
+>_SELECT order_num,
+order_date 
+FROM orders
+WHERE order_date BETWEEN '2020-01-01' AND '2020-01-31';_
