--- a/_posts/2023-9-27-Mysql必知必会第十章.md
+++ b/_posts/2023-9-27-Mysql必知必会第十章.md
@@ -6,3 +6,19 @@ ORDER BY order_lines;_
 
 
 <font color = "red"> __睡了，明天再写__</font>
+
+2. _编写SQL语句，返回名为cheapest_item的字段，该字段包含每个供应商成本最低的产品（使用Products表中的prod_price），然后从最低成本到最高成本对结果进行排序。_
+> _select vend_id,min(prod_price) as cheapest_item
+from Products
+group by vend_id
+order by cheapest_item;_
+
+3. _确定最佳顾客非常重要，请编写SQL语句，返回至少含100项的所有订单的订单号（OrderItems表中的order_num）。_
+> _SELECT order_num
+FROM orderitems
+WHERE quantity >= 100;_
+
+4. _确定最佳顾客的另一种方式是看他们花了多少钱。编写SQL语句，返回总价至少为1000的所有订单的订单号（OrderItems表中的order_num）。提示：需要计算总和（item_price乘以quantity）。按订单号对结果进行排序。_
+> _SELECT order_num
+FROM orderitems
+WHERE quantity*item_price >= 1000;_
